--- a/accueil.html
+++ b/accueil.html
@@ -68,8 +68,8 @@
     
             <footer class="footer">
                 <div id="about-me">
-                    <h3>About Me</h3>
-                    <p>Je m'appelle Lauren, j'ai 16 ans. Je suis lycéenne et j'adore apprendre de nouveaux concepts scientifiques.</p>
+                    <h3>Contact</h3>
+                    <p>mail: lawsonlauren07@gmail.com</p>
                 </div>
                 <div class="site-info">
                     <h3>Qu'est-ce qu'il y a sur ce site ?</h3>
@@ -77,7 +77,7 @@
                 </div>
                 <div class="why-site">
                     <h3>Pourquoi ce site ?</h3>
-                    <p>Nous croyons en l'importance des sciences et de la technologie dans notre monde moderne. Notre site vise à encourager l'intérêt pour les sciences et à soutenir les étudiants et les passionnés dans leur parcours éducatif.</p>
+                    <p>J'ai créé ce site afin de promouvoir les STEM dans le système éducatif français. L'apprentissage des sciences et des technologies est selon moi pas assez poussé alors que ce sont des enjeux sociétaux. </p>
                 </div>
     </body>
     <script src="script.js"></script>
