--- a/maths.html
+++ b/maths.html
@@ -16,7 +16,7 @@
         </div>
         <nav class="menu">
             <ul>
-                <li><a href="accueil.html" >Accueil</a></li>
+                <li><a href="index.html" >Accueil</a></li>
                 <li><a href="maths.html"class="active">Maths</a></li>
                     
                 <li><a href="physique.html">Physique</a></li>
