--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             </div>
             <nav class="menu">
                 <ul>
-                    <li><a href="accueil.html" class="active">Accueil</a></li>
+                    <li><a href="index.html" class="active">Accueil</a></li>
                     <li><a href="maths.html">Maths</a></li>
                         
                     <li><a href="physique.html">Physique</a></li>
