--- a/physique.html
+++ b/physique.html
@@ -13,7 +13,7 @@
             </div>
             <nav class="menu">
                 <ul>
-                    <li><a href="accueil.html" >Accueil</a></li>
+                    <li><a href="index.html" >Accueil</a></li>
                     <li><a href="maths.html">Maths</a></li>
                         
                     <li><a href="physique.html"class="active">Physique</a></li>
