--- a/quatrieme.html
+++ b/quatrieme.html
@@ -22,7 +22,7 @@
         </div>
         <nav class="menu">
             <ul>
-                <li><a href="accueil.html" >Accueil</a></li>
+                <li><a href="index.html" >Accueil</a></li>
                 <li><a href="maths.html" class="active">Maths</a>
                    </li>
                     
