Mise à jour du site web : corrections et ajouts

--- a/physique.html
+++ b/physique.html
@@ -15,15 +15,12 @@
                 <ul>
                     <li><a href="index.html" >Accueil</a></li>
                     <li><a href="maths.html">Maths</a>
-                    <ul class="submenu">
-                        <li><a href="quatrieme.html">Quatrième</a></li>
-                        <li><a href="troisieme.html">Troisième</a></li>
-                        <li><a href="seconde.html">Seconde</a></li>
-                        <li><a href="premiere.html">Première</a></li>
-                        <li><a href="terminale.html">Terminale</a></li>
-                        <li><a href="allerloin.html">Pour aller plus loin</a></li>
-                        
-                    </ul></li>
+                        <ul class="sub-menu">
+                            <li><a href="coulisses.html">Derrière les coulisses</a></li>
+                            <li><a href="plusloin.html">Pour aller plus loin</a></li>
+                            <li><a href="olympiades.html">Olympiades</a></li>
+                            <li><a href="revision.html">Révisions et sujets de DS</a></li>
+                        </ul></li>
                     <li><a href="physique.html"class="active">Physique</a></li>
                     <li><a href="info.html">Informatique</a>
                         <ul class="sub-menu">
@@ -39,3 +36,24 @@
                 </ul>
             </nav>
         </header>
+        <section class="section">
+            <div class="section-title">Expériences Simples</div>
+            <div class="section-content">
+                <div class="experiments">
+                    <div class="experiment">
+                        <h3>Expérience de la Surface Hydrophobe</h3>
+                        <p>Matériel : une feuille de papier et de l'eau</p>
+                        <p>Explication : ...</p>
+                        <p>Résultat attendu : ...</p>
+                    </div>
+                    <div class="experiment">
+                        <h3>Expérience de l'Électricité Statique</h3>
+                        <p>Matériel : un ballon en caoutchouc et un morceau de tissu en laine ou un cheveu</p>
+                        <p>Explication : ...</p>
+                        <p>Résultat attendu : ...</p>
+                    </div>
+                    <!-- Ajoute d'autres expériences similaires ici -->
+                </div>
+            </div>
+        </section>
+        
