Ajout de parties du site et modification du style

--- a/info.html
+++ b/info.html
@@ -16,19 +16,19 @@
                     <li><a href="index.html" >Accueil</a></li>
                     <li><a href="maths.html">Maths</a></li>
                     <ul class="sub-menu">
-                        <li><a href="coulisses.html">Derrière les coulisses</a></li>
-                        <li><a href="plusloin.html">Pour aller plus loin</a></li>
-                        <li><a href="olympiades.html">Olympiades</a></li>
-                        <li><a href="revision.html">Révisions et sujets de DS</a></li>
+                        <li><a class="cs"href="coulisses.html">Derrière les coulisses</a></li>
+                        <li><a class="cs"href="plusloin.html">Pour aller plus loin</a></li>
+                        <li><a class="cs"href="olympiades.html">Olympiades</a></li>
+                        <li><a class="cs"href="revision.html">Révisions et sujets de DS</a></li>
                     </ul></li>
                         
                     <li><a href="physique.html">Physique</a></li>
                     <li><a href="info.html"class="active">Informatique</a>
                         <ul class="sub-menu">
-                        <li><a href="commencer.html">Comment commencer</a></li>
-                        <li><a href="algo.html">L'algorithmique</a></li>
-                        <li><a href="correctionsios.html">Corrections France IOI</a></li>
-                        <li><a href="arduino.html">Arduino</a></li></ul>
+                        <li><a class="cs"href="commencer.html">Comment commencer</a></li>
+                        <li><a class="cs"href="algo.html">L'algorithmique</a></li>
+                        <li><a class="cs"href="correctionsios.html">Corrections France IOI</a></li>
+                        <li><a class="cs"href="articles.html">Articles</a></li></ul>
                     </li>
                     </ul></nav></header>
                         
@@ -68,9 +68,9 @@
                                 <a href="correctionsios.html" class="button">Voir les Corrections</a>
                             </div>
                             <div class="subsection">
-                                <h2>Électronique avec Arduino</h2>
-                                <p>Explorez le monde de l'électronique en utilisant la plateforme Arduino. Apprenez à créer des projets électroniques passionnants en programmant des microcontrôleurs et en connectant des composants électroniques.</p>
-                                <a href="#" class="button">Découvrir</a>
+                                <h2>Articles sur la technologie</h2>
+                                <p>Découvrez des articles sur des sujets variés.</p>
+                                <a href="articles.html" class="button">Découvrir</a>
                             </div>
                         </div>
                     </section>
