--- a/maths.html
+++ b/maths.html
@@ -19,10 +19,10 @@
                 <li><a href="index.html" >Accueil</a></li>
                 <li><a href="maths.html"class="active">Maths</a>
                     <ul class="sub-menu">
-                        <li><a href="coulisses.html">Derrière les coulisses</a></li>
-                        <li><a href="plusloin.html">Pour aller plus loin</a></li>
-                        <li><a href="olympiades.html">Olympiades</a></li>
-                        <li><a href="revision.html">Révisions et sujets de DS</a></li>
+                        <li><a class="cs"href="coulisses.html">Derrière les coulisses</a></li>
+                        <li><a class="cs"href="plusloin.html">Pour aller plus loin</a></li>
+                        <li><a class="cs"href="olympiades.html">Olympiades</a></li>
+                        <li><a class="cs"href="revision.html">Révisions et sujets de DS</a></li>
                     </ul></li>
                 </li>
 
@@ -30,10 +30,10 @@
                 <li><a href="physique.html">Physique</a></li>
                 <li><a href="info.html">Informatique</a>
                     <ul class="sub-menu">
-                        <li><a href="commencer.html">Comment commencer</a></li>
-                        <li><a href="algo.html">L'algorithmique</a></li>
-                        <li><a href="correctionsios.html">Corrections France IOI</a></li>
-                        <li><a href="arduino.html">Arduino</a></li></ul>
+                        <li><a class="cs"href="commencer.html">Comment commencer</a></li>
+                        <li><a class="cs"href="algo.html">L'algorithmique</a></li>
+                        <li><a class="cs"href="correctionsios.html">Corrections France IOI</a></li>
+                        <li><a class="cs" href="articles.html">Articles</a></li></ul>
                         </ul>
                     </li>
                   
