--- a/quatrieme.html
+++ b/quatrieme.html
@@ -29,12 +29,13 @@
                     
                 <li><a href="physique.html">Physique</a></li>
                 <li><a href="info.html">Informatique</a>
-                <ul class="sub-menu">
-                    <li><a href="algo.html">L'algorithmique</a></li>
-                    <li><a href="python.html">Python</a></li>
-                    <li><a href="correctionsios.html">France IOI</a></li>
-                    <li><a href="ressources.html">Ressources</a></li>
-                </ul>
+                    <li><a href="info.html"class="active">Informatique</a>
+                        <ul class="sub-menu">
+                        <li><a class="cs"href="commencer.html">Comment commencer</a></li>
+                        <li><a class="cs"href="algo.html">L'algorithmique</a></li>
+                        <li><a class="cs"href="correctionsios.html">Corrections France IOI</a></li>
+                        <li><a class="cs"href="articles.html">Articles</a></li></ul>
+                    </li>
                     </li>
                     
                     </li>
